--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.typing-animation span {
+  display: inline-block;
+  overflow: hidden;
+  border-right: 3px solid white;
+  white-space: nowrap;
+  animation: typing 2s steps(20) infinite alternate-reverse;
+}
